--- a/apicockpit/src/main/resources/.h2.server.properties
+++ b/apicockpit/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Sun Nov 25 19:07:25 WAT 2018
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/apicockpit|apicockpit
 webAllowOthers=true
 webPort=8082
