--- a/apicockpit/package.json
+++ b/apicockpit/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.8",
     "@fortawesome/free-solid-svg-icons": "5.5.0",
     "@ng-bootstrap/ng-bootstrap": "4.0.0",
+    "@toverux/ngx-sweetalert2": "^4.0.0",
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
     "moment": "2.22.2",
@@ -29,6 +30,7 @@
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.3",
     "swagger-ui": "2.2.10",
+    "sweetalert2": "^7.29.2",
     "tslib": "1.9.3",
     "zone.js": "0.8.26"
   },
