--- a/apicockpit/angular.json
+++ b/apicockpit/angular.json
@@ -7,7 +7,13 @@
       "root": "",
       "sourceRoot": "src/main/webapp",
       "projectType": "application",
-      "architect": {}
+      "architect": {
+          "build": {
+              "options": {
+                  "styles": []
+              }
+          }
+      }
     }
   },
   "defaultProject": "apicockpit",
