--- a/apicockpit/package.json
+++ b/apicockpit/package.json
@@ -22,13 +22,16 @@
     "@toverux/ngx-sweetalert2": "^4.0.0",
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
+    "jquery": "^3.3.1",
     "moment": "2.22.2",
     "ng-jhipster": "0.5.4",
+    "ng-selectize": "^1.1.3",
     "ngx-cookie": "2.0.1",
     "ngx-infinite-scroll": "6.0.1",
     "ngx-webstorage": "2.0.1",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.3",
+    "selectize": "^0.12.6",
     "swagger-ui": "2.2.10",
     "sweetalert2": "^7.29.2",
     "tslib": "1.9.3",
