testing out stucture

--- a/apicockpit/pom.xml
+++ b/apicockpit/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.apifuze.cockpit</groupId>
-    <artifactId>apicockpit</artifactId>
+    <groupId>com.apifuze</groupId>
+    <artifactId>cockpit</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Apicockpit</name>
@@ -97,6 +97,7 @@
         <sonar.tests>${project.basedir}/src/test/</sonar.tests>
 
         <!-- jhipster-needle-maven-property -->
+        <com.apifuze.utils>0.0.1-SNAPSHOT</com.apifuze.utils>
     </properties>
 
     <dependencyManagement>
@@ -353,6 +354,12 @@
             <artifactId>spring-security-data</artifactId>
         </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
+
+        <dependency>
+            <groupId>com.apifuze</groupId>
+            <artifactId>utils</artifactId>
+            <version>${com.apifuze.utils}</version>
+        </dependency>
     </dependencies>
 
     <build>
