--- a/obnwebservice/src/main/resources/config/application-dev.yml
+++ b/obnwebservice/src/main/resources/config/application-dev.yml
@@ -23,6 +23,7 @@ eureka:
     instance:
         prefer-ip-address: true
     client:
+        enabled: false
         service-url:
             defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
 
@@ -114,6 +115,7 @@ jhipster:
         # exposed-headers: "Authorization,Link,X-Total-Count"
         # allow-credentials: true
         # max-age: 1800
+
     security:
         authentication:
             jwt:
