--- a/apicockpit/package.json
+++ b/apicockpit/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.8",
     "@fortawesome/free-solid-svg-icons": "5.5.0",
     "@ng-bootstrap/ng-bootstrap": "4.0.0",
+    "@ng-select/ng-select": "^2.13.0",
     "@toverux/ngx-sweetalert2": "^4.0.0",
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
